

syntax = "proto3";

package pb;

option go_package = ".;pb";

message CD {
	int64 expireMs = 1; // 过期时间，单位ms
	int64 periodMs = 2; // 周期单位ms
}

message SimpleUserInfo {
	int32 uid = 1;
	string nickname = 2;
	string icon = 3;
	int32 vip = 4;
	int32 sex = 5;
	int32 level = 6;
}

message UserInfo {
    int32 uid = 1;
    string serverLocation = 3;
    string createTime = 4;
    string chanId = 5;
    string openId = 6;
	int32 sex = 8;
	string icon = 9;
	string plateIcon = 10;
	string nickname = 11;
}

message Task {
	int32 id = 1;
	int64 num = 2; // 当前进度
	int64 total = 3; // 总进度
	int32 status = 4;
}

message NumericItem {
	int32 id = 1;
	int64 num = 2;
	int64 balance = 3;
}

message Bag {
	repeated NumericItem numericItems = 1;
}

message GlobalBin {
	int64 lastDayUpdateTs = 1; // 每日数据上次更新时间
	Bag bag = 2; // 背包
	int32 level = 3; // 等级
	repeated Task tasks = 5;
	DailySignIn signIn = 6; // 签到数据
}

// 离线数据
message OfflineBin {
  repeated NumericItem items = 2;
}

message UserBin {
  HallBin hall = 1;       // 大厅数据
  GlobalBin global = 2;   // 全局数据
  OfflineBin offline = 3; // 离线数据
  RoomBin room = 4;       // 房间数据
}

message RoomBin {
	FingerGuessingRoom fingerGuessing = 1;
}

// 大厅的数据
message HallBin {
  string loginClientVersion = 4; // 上次登陆的版本
  int64 lastMassMail = 10; // 上次群发邮件的ID
}

message FingerGuessingRoom {
	int32 winPlay = 1;
	int32 losePlay = 2;
	int32 totalPlay = 3;
}

// 签到
message DailySignIn {
	int64 drawTs = 1;
	int64 startTs = 2;
	int32 drawState = 3;
}